// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorEnvelopeController after received content 1`] = `
<EditorEnvelopeView
  context={
    Object {
      "channel": "VSCODE",
      "operatingSystem": "WINDOWS",
    }
  }
  exposing={[Function]}
  keyboardShortcutsService={
    e {
      "args": Object {
        "editorContext": Object {
          "channel": "VSCODE",
          "operatingSystem": "WINDOWS",
        },
      },
      "eventIdentifiers": 2,
      "keyBindings": Map {
        1 => Object {
          "combination": "shift+/",
          "label": "Help | Show keyboard shortcuts",
          "listener": [Function],
          "opts": Object {
            "element": [Window],
          },
        },
      },
    }
  }
  loadingScreenContainer={
    <div
      id="loading-screen"
    >
      <div
        class="kogito-tooling--loading-screen"
        style="opacity: 0; transition: opacity 400ms;"
      >
        <div
          class="pf-c-page"
        >
          <main
            class="pf-c-page__main"
            role="main"
            tabindex="-1"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                class="pf-c-empty-state pf-m-lg"
              >
                <div
                  class="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    class="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      class="pf-c-spinner__clipper"
                    />
                    <div
                      class="pf-c-spinner__lead-ball"
                    />
                    <div
                      class="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  class="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  class="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>
  }
  messageBus={
    KogitoEnvelopeBus {
      "api": Object {
        "receive_contentChanged": [Function],
        "receive_contentRequest": [Function],
        "receive_editorRedo": [Function],
        "receive_editorUndo": [Function],
        "receive_guidedTourElementPositionRequest": [Function],
        "receive_initRequest": [Function],
        "receive_previewRequest": [Function],
      },
      "associatedBusId": "someBusId",
      "bus": Object {
        "postMessage": [Function],
      },
      "eventListener": [Function],
      "manager": e {
        "api": Object {
          "receive_contentChanged": [Function],
          "receive_contentRequest": [Function],
          "receive_editorRedo": [Function],
          "receive_editorUndo": [Function],
          "receive_guidedTourElementPositionRequest": [Function],
          "receive_initRequest": [Function],
          "receive_previewRequest": [Function],
        },
        "callbacks": Map {},
        "generateRandomId": [MockFunction] {
          "calls": Array [
            Array [],
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": "1",
            },
            Object {
              "type": "return",
              "value": "2",
            },
          ],
        },
        "send": [Function],
      },
      "targetOrigin": "test-target-origin",
    }
  }
  stateControlService={
    Object {
      "redo": [MockFunction],
      "registry": [MockFunction],
      "undo": [MockFunction],
    }
  }
>
  <Component
    context={
      Object {
        "channel": "VSCODE",
        "operatingSystem": "WINDOWS",
      }
    }
    keyboardShortcutsService={
      e {
        "args": Object {
          "editorContext": Object {
            "channel": "VSCODE",
            "operatingSystem": "WINDOWS",
          },
        },
        "eventIdentifiers": 2,
        "keyBindings": Map {
          1 => Object {
            "combination": "shift+/",
            "label": "Help | Show keyboard shortcuts",
            "listener": [Function],
            "opts": Object {
              "element": [Window],
            },
          },
        },
      }
    }
  >
    <div
      className="kogito-tooling--keyboard-shortcuts-icon"
      data-testid="keyboard-shortcuts-help-overlay-icon"
      onClick={[Function]}
    >
      <KeyboardIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
        title={null}
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 576 512"
          width="1em"
        >
          <path
            d="M528 448H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h480c26.51 0 48 21.49 48 48v288c0 26.51-21.49 48-48 48zM128 180v-40c0-6.627-5.373-12-12-12H76c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12zm96 0v-40c0-6.627-5.373-12-12-12h-40c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12zm96 0v-40c0-6.627-5.373-12-12-12h-40c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12zm96 0v-40c0-6.627-5.373-12-12-12h-40c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12zm96 0v-40c0-6.627-5.373-12-12-12h-40c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12zm-336 96v-40c0-6.627-5.373-12-12-12h-40c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12zm96 0v-40c0-6.627-5.373-12-12-12h-40c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12zm96 0v-40c0-6.627-5.373-12-12-12h-40c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12zm96 0v-40c0-6.627-5.373-12-12-12h-40c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12zm-336 96v-40c0-6.627-5.373-12-12-12H76c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12zm288 0v-40c0-6.627-5.373-12-12-12H172c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h232c6.627 0 12-5.373 12-12zm96 0v-40c0-6.627-5.373-12-12-12h-40c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h40c6.627 0 12-5.373 12-12z"
            transform=""
          />
        </svg>
      </KeyboardIcon>
    </div>
    <Modal
      actions={Array []}
      appendTo={
        <body>
          <div
            id="envelopeContainer"
          />
          <div
            id="envelopeContainer"
          />
          <div
            id="envelopeContainer"
          />
          <div
            id="loading-screen"
          >
            <div
              class="kogito-tooling--loading-screen"
              style="opacity: 0; transition: opacity 400ms;"
            >
              <div
                class="pf-c-page"
              >
                <main
                  class="pf-c-page__main"
                  role="main"
                  tabindex="-1"
                >
                  <div
                    class="pf-l-bullseye"
                  >
                    <div
                      class="pf-c-empty-state pf-m-lg"
                    >
                      <div
                        class="pf-u-mb-lg"
                      >
                        <div
                          aria-valuetext="Loading..."
                          class="pf-c-spinner"
                          role="progressbar"
                        >
                          <div
                            class="pf-c-spinner__clipper"
                          />
                          <div
                            class="pf-c-spinner__lead-ball"
                          />
                          <div
                            class="pf-c-spinner__tail-ball"
                          />
                        </div>
                      </div>
                      <h5
                        class="pf-c-title pf-m-lg"
                      >
                        Loading...
                      </h5>
                      <div
                        class="pf-c-empty-state__body"
                      />
                    </div>
                  </div>
                </main>
              </div>
            </div>
          </div>
          <div
            id="envelopeContainer"
          />
          <div />
        </body>
      }
      ariaDescribedById=""
      className=""
      data-testid="keyboard-shortcuts-help-overlay"
      hideTitle={false}
      isFooterLeftAligned={false}
      isLarge={false}
      isOpen={false}
      isSmall={false}
      onClose={[Function]}
      showClose={true}
      title="Keyboard shortcuts"
      width="60%"
    >
      <Portal
        containerInfo={<div />}
      >
        <ModalContent
          actions={Array []}
          ariaDescribedById=""
          className=""
          data-testid="keyboard-shortcuts-help-overlay"
          hideTitle={false}
          id="pf-modal-0"
          isFooterLeftAligned={false}
          isLarge={false}
          isOpen={false}
          isSmall={false}
          onClose={[Function]}
          showClose={true}
          title="Keyboard shortcuts"
          width="60%"
        />
      </Portal>
    </Modal>
  </Component>
  <Portal
    containerInfo={
      <div
        id="loading-screen"
      >
        <div
          class="kogito-tooling--loading-screen"
          style="opacity: 0; transition: opacity 400ms;"
        >
          <div
            class="pf-c-page"
          >
            <main
              class="pf-c-page__main"
              role="main"
              tabindex="-1"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  class="pf-c-empty-state pf-m-lg"
                >
                  <div
                    class="pf-u-mb-lg"
                  >
                    <div
                      aria-valuetext="Loading..."
                      class="pf-c-spinner"
                      role="progressbar"
                    >
                      <div
                        class="pf-c-spinner__clipper"
                      />
                      <div
                        class="pf-c-spinner__lead-ball"
                      />
                      <div
                        class="pf-c-spinner__tail-ball"
                      />
                    </div>
                  </div>
                  <h5
                    class="pf-c-title pf-m-lg"
                  >
                    Loading...
                  </h5>
                  <div
                    class="pf-c-empty-state__body"
                  />
                </div>
              </div>
            </main>
          </div>
        </div>
      </div>
    }
  >
    <LoadingScreen
      visible={false}
    >
      <div
        className="kogito-tooling--loading-screen"
        onTransitionEnd={[Function]}
        style={
          Object {
            "opacity": 0,
            "transition": "opacity 400ms",
          }
        }
      >
        <div
          className="pf-c-page"
        >
          <main
            className="pf-c-page__main"
            role="main"
            tabIndex={-1}
          >
            <div
              className="pf-l-bullseye"
            >
              <div
                className="pf-c-empty-state pf-m-lg"
              >
                <div
                  className="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    className="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      className="pf-c-spinner__clipper"
                    />
                    <div
                      className="pf-c-spinner__lead-ball"
                    />
                    <div
                      className="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  className="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  className="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </LoadingScreen>
  </Portal>
  <DummyEditorComponent
    exposing={[Function]}
  >
    <div>
      Here's the dummy content: 
      test content
    </div>
  </DummyEditorComponent>
</EditorEnvelopeView>
`;

exports[`EditorEnvelopeController opens 1`] = `
<EditorEnvelopeView
  context={
    Object {
      "channel": "VSCODE",
      "operatingSystem": "WINDOWS",
    }
  }
  exposing={[Function]}
  keyboardShortcutsService={
    e {
      "args": Object {
        "editorContext": Object {
          "channel": "VSCODE",
          "operatingSystem": "WINDOWS",
        },
      },
      "eventIdentifiers": 1,
      "keyBindings": Map {},
    }
  }
  loadingScreenContainer={
    <div
      id="loading-screen"
    >
      <div
        class="kogito-tooling--loading-screen"
        style="opacity: 1;"
      >
        <div
          class="pf-c-page"
        >
          <main
            class="pf-c-page__main"
            role="main"
            tabindex="-1"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                class="pf-c-empty-state pf-m-lg"
              >
                <div
                  class="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    class="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      class="pf-c-spinner__clipper"
                    />
                    <div
                      class="pf-c-spinner__lead-ball"
                    />
                    <div
                      class="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  class="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  class="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>
  }
  messageBus={
    KogitoEnvelopeBus {
      "api": Object {
        "receive_contentChanged": [Function],
        "receive_contentRequest": [Function],
        "receive_editorRedo": [Function],
        "receive_editorUndo": [Function],
        "receive_guidedTourElementPositionRequest": [Function],
        "receive_initRequest": [Function],
        "receive_previewRequest": [Function],
      },
      "bus": Object {
        "postMessage": [Function],
      },
      "eventListener": [Function],
      "manager": e {
        "api": Object {
          "receive_contentChanged": [Function],
          "receive_contentRequest": [Function],
          "receive_editorRedo": [Function],
          "receive_editorUndo": [Function],
          "receive_guidedTourElementPositionRequest": [Function],
          "receive_initRequest": [Function],
          "receive_previewRequest": [Function],
        },
        "callbacks": Map {},
        "send": [Function],
      },
    }
  }
  stateControlService={
    Object {
      "redo": [MockFunction],
      "registry": [MockFunction],
      "undo": [MockFunction],
    }
  }
>
  <Portal
    containerInfo={
      <div
        id="loading-screen"
      >
        <div
          class="kogito-tooling--loading-screen"
          style="opacity: 1;"
        >
          <div
            class="pf-c-page"
          >
            <main
              class="pf-c-page__main"
              role="main"
              tabindex="-1"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  class="pf-c-empty-state pf-m-lg"
                >
                  <div
                    class="pf-u-mb-lg"
                  >
                    <div
                      aria-valuetext="Loading..."
                      class="pf-c-spinner"
                      role="progressbar"
                    >
                      <div
                        class="pf-c-spinner__clipper"
                      />
                      <div
                        class="pf-c-spinner__lead-ball"
                      />
                      <div
                        class="pf-c-spinner__tail-ball"
                      />
                    </div>
                  </div>
                  <h5
                    class="pf-c-title pf-m-lg"
                  >
                    Loading...
                  </h5>
                  <div
                    class="pf-c-empty-state__body"
                  />
                </div>
              </div>
            </main>
          </div>
        </div>
      </div>
    }
  >
    <LoadingScreen
      visible={true}
    >
      <div
        className="kogito-tooling--loading-screen"
        onTransitionEnd={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <div
          className="pf-c-page"
        >
          <main
            className="pf-c-page__main"
            role="main"
            tabIndex={-1}
          >
            <div
              className="pf-l-bullseye"
            >
              <div
                className="pf-c-empty-state pf-m-lg"
              >
                <div
                  className="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    className="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      className="pf-c-spinner__clipper"
                    />
                    <div
                      className="pf-c-spinner__lead-ball"
                    />
                    <div
                      className="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  className="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  className="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </LoadingScreen>
  </Portal>
</EditorEnvelopeView>
`;

exports[`EditorEnvelopeController receives init request 1`] = `
<EditorEnvelopeView
  context={
    Object {
      "channel": "VSCODE",
      "operatingSystem": "WINDOWS",
    }
  }
  exposing={[Function]}
  keyboardShortcutsService={
    e {
      "args": Object {
        "editorContext": Object {
          "channel": "VSCODE",
          "operatingSystem": "WINDOWS",
        },
      },
      "eventIdentifiers": 1,
      "keyBindings": Map {},
    }
  }
  loadingScreenContainer={
    <div
      id="loading-screen"
    >
      <div
        class="kogito-tooling--loading-screen"
        style="opacity: 1;"
      >
        <div
          class="pf-c-page"
        >
          <main
            class="pf-c-page__main"
            role="main"
            tabindex="-1"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                class="pf-c-empty-state pf-m-lg"
              >
                <div
                  class="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    class="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      class="pf-c-spinner__clipper"
                    />
                    <div
                      class="pf-c-spinner__lead-ball"
                    />
                    <div
                      class="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  class="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  class="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>
  }
  messageBus={
    KogitoEnvelopeBus {
      "api": Object {
        "receive_contentChanged": [Function],
        "receive_contentRequest": [Function],
        "receive_editorRedo": [Function],
        "receive_editorUndo": [Function],
        "receive_guidedTourElementPositionRequest": [Function],
        "receive_initRequest": [Function],
        "receive_previewRequest": [Function],
      },
      "associatedBusId": "someBusId",
      "bus": Object {
        "postMessage": [Function],
      },
      "eventListener": [Function],
      "manager": e {
        "api": Object {
          "receive_contentChanged": [Function],
          "receive_contentRequest": [Function],
          "receive_editorRedo": [Function],
          "receive_editorUndo": [Function],
          "receive_guidedTourElementPositionRequest": [Function],
          "receive_initRequest": [Function],
          "receive_previewRequest": [Function],
        },
        "callbacks": Map {
          "1" => Object {
            "reject": [Function],
            "resolve": [Function],
          },
        },
        "generateRandomId": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": "1",
            },
          ],
        },
        "send": [Function],
      },
      "targetOrigin": "test-target-origin",
    }
  }
  stateControlService={
    Object {
      "redo": [MockFunction],
      "registry": [MockFunction],
      "undo": [MockFunction],
    }
  }
>
  <Portal
    containerInfo={
      <div
        id="loading-screen"
      >
        <div
          class="kogito-tooling--loading-screen"
          style="opacity: 1;"
        >
          <div
            class="pf-c-page"
          >
            <main
              class="pf-c-page__main"
              role="main"
              tabindex="-1"
            >
              <div
                class="pf-l-bullseye"
              >
                <div
                  class="pf-c-empty-state pf-m-lg"
                >
                  <div
                    class="pf-u-mb-lg"
                  >
                    <div
                      aria-valuetext="Loading..."
                      class="pf-c-spinner"
                      role="progressbar"
                    >
                      <div
                        class="pf-c-spinner__clipper"
                      />
                      <div
                        class="pf-c-spinner__lead-ball"
                      />
                      <div
                        class="pf-c-spinner__tail-ball"
                      />
                    </div>
                  </div>
                  <h5
                    class="pf-c-title pf-m-lg"
                  >
                    Loading...
                  </h5>
                  <div
                    class="pf-c-empty-state__body"
                  />
                </div>
              </div>
            </main>
          </div>
        </div>
      </div>
    }
  >
    <LoadingScreen
      visible={true}
    >
      <div
        className="kogito-tooling--loading-screen"
        onTransitionEnd={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <div
          className="pf-c-page"
        >
          <main
            className="pf-c-page__main"
            role="main"
            tabIndex={-1}
          >
            <div
              className="pf-l-bullseye"
            >
              <div
                className="pf-c-empty-state pf-m-lg"
              >
                <div
                  className="pf-u-mb-lg"
                >
                  <div
                    aria-valuetext="Loading..."
                    className="pf-c-spinner"
                    role="progressbar"
                  >
                    <div
                      className="pf-c-spinner__clipper"
                    />
                    <div
                      className="pf-c-spinner__lead-ball"
                    />
                    <div
                      className="pf-c-spinner__tail-ball"
                    />
                  </div>
                </div>
                <h5
                  className="pf-c-title pf-m-lg"
                >
                  Loading...
                </h5>
                <div
                  className="pf-c-empty-state__body"
                />
              </div>
            </div>
          </main>
        </div>
      </div>
    </LoadingScreen>
  </Portal>
</EditorEnvelopeView>
`;
